@@ -10,6 +10,7 @@
 
 
 Version 4.1.5
+ = Fixed: [ 1949549 ] GEDCOM Stats block: incorrect block title (canajun2eh)
  - Fixed: Use stats class to calculate stats (fisharebest)
  - Fixed: Stats block counting records from other gedcoms (fisharebest)
  - Fixed: [ 1942593 ] Relationship Chart nth Cousin Calculation Issue (canajun2eh)
